services/ingress/data.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysql
  namespace: data
  labels:
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: mysql.hugocortes.me
    http:
      paths:
      - backend:
          serviceName: mysql
          servicePort: 3306
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongodb
  namespace: data
  labels:
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: mongodb.hugocortes.me
  
    http:
      paths:
      - backend:
          serviceName: mongodb
          servicePort: 27017
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis
  namespace: data
  labels:
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: redis.hugocortes.me
    http:
      paths:
      - backend:
          serviceName: redis-master
          servicePort: 6379
